2011-04-14  Anders Carlsson  <andersca@apple.com>

        Fix build.

        RuntimeApplicationChecks.h needs to be a private header so WebKit can find it.

        * WebCore.xcodeproj/project.pbxproj:

2011-04-14  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, build fix for r83864.

        * inspector/front-end/DOMAgent.js:
        (WebInspector.DOMAgent.prototype._childNodeRemoved):

2011-04-14  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Content area highlight does not cover scrollbars
        https://bugs.webkit.org/show_bug.cgi?id=58528

        * inspector/DOMNodeHighlighter.cpp:
        (WebCore::DOMNodeHighlighter::DrawNodeHighlight):

2011-04-14  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: re-implement dom breakpoints.
        https://bugs.webkit.org/show_bug.cgi?id=57038

        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * inspector/front-end/BreakpointManager.js: Removed.
        * inspector/front-end/BreakpointsSidebarPane.js:
        (WebInspector.NativeBreakpointsSidebarPane):
        (WebInspector.NativeBreakpointsSidebarPane.prototype._reset):
        (WebInspector.XHRBreakpointsSidebarPane.prototype._restoreBreakpoints):
        * inspector/front-end/CallStackSidebarPane.js:
        (WebInspector.CallStackSidebarPane.prototype.update):
        (WebInspector.CallStackSidebarPane.prototype.setStatus):
        * inspector/front-end/DOMAgent.js:
        (WebInspector.DOMNode):
        (WebInspector.DOMAgent.prototype._childNodeRemoved):
        * inspector/front-end/DOMBreakpointsSidebarPane.js: Added.
        (WebInspector.DOMBreakpointsSidebarPane):
        (WebInspector.DOMBreakpointsSidebarPane.prototype.setInspectedURL):
        (WebInspector.DOMBreakpointsSidebarPane.prototype.populateNodeContextMenu.toggleBreakpoint):