@@ -1,3 +1,12 @@
+2011-04-14  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Unreviewed build fixes for wxMSW and wx 2.9.1.1.
+
+        * platform/graphics/wx/FontPlatformDataWx.cpp:
+        (WebCore::FontPlatformData::FontPlatformData):
+        * platform/wx/FileSystemWx.cpp:
+        (WebCore::writeToFile):
+
 2011-04-14  Anders Carlsson  <andersca@apple.com>
 
         Fix build.
